--- a/blog-detail1.html
+++ b/blog-detail1.html
@@ -173,7 +173,16 @@
 					<div class="p-r-45 p-r-0-lg">
 						<!--  -->
 						<div class="p-t-32">
-
+							<div class="wrap-pic-w how-pos5-parent">
+								<img src="blogImage/0101.jpg" alt="IMG-BLOG">
+							</div>
+							<br>
+							<p class="mtext-112 cl2 p-b-33">
+								<a href="blog-detail2.html">
+									Jarvis Demo
+									<br>
+								</a>
+							</p>
 							<h4 class="ltext-109 cl2 p-b-28">
 								Jarvis System
 							</h4>
@@ -272,12 +281,7 @@
 							</p>
 
 
-							<p class="mtext-112 cl2 p-b-33">
-								<a href="blog-detail2.html">
-									Jarvis Demo
-									<br>
-								</a>
-							</p>
+
 
 							<p class="mtext-112 cl2 p-b-33">
 								<a href="https://github.com/ArthurWuTW/jarvis">
