--- a/blog-detail2.html
+++ b/blog-detail2.html
@@ -208,6 +208,17 @@
 		</h4>
 
 		<div class="row isotope-grid">
+
+			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
+				<!-- Block2 -->
+				<div class="block2">
+					<div class="block2-pic hov-img0">
+						<img src="blogImage/IMG_1553.jpg" alt="IMG-PRODUCT">
+					</div>
+
+				</div>
+			</div>
+
 			<div class="col-sm-6 col-md-4 col-lg-3 p-b-35 isotope-item women">
 				<!-- Block2 -->
 				<div class="block2">
