--- a/blog-detail2.html
+++ b/blog-detail2.html
@@ -186,6 +186,9 @@
 
 							<iframe width="560" height="315" src="https://www.youtube.com/embed/RPv0TmH_QnU" frameborder="0" allow="autoplay; encrypted-media"
 							 allowfullscreen></iframe>
+
+							<iframe width="560" height="315" src="https://www.youtube.com/embed/lKplZ96djVw" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture"
+							 allowfullscreen></iframe>
 						</div>
 
 
