--- a/blog-detail4.html
+++ b/blog-detail4.html
@@ -172,6 +172,19 @@
 				<div class="col-md-8 col-lg-9 p-b-80">
 					<div class="p-r-45 p-r-0-lg">
 						<!--  -->
+						<a class="hov-img0 how-pos5-parent">
+							<img src="blogImage/bd1.jpg" alt="IMG-BLOG">
+
+							<div class="flex-col-c-m size-123 bg9 how-pos5">
+								<span class="ltext-107 cl2 txt-center">
+									26
+								</span>
+
+								<span class="stext-109 cl3 txt-center">
+									Oct 2018
+								</span>
+							</div>
+						</a>
 						<div class="p-t-32">
 
 							<h4 class="ltext-109 cl2 p-b-28">
