--- a/blog.html
+++ b/blog.html
@@ -159,7 +159,7 @@
 						<!-- item blog -->
 						<div class="p-b-63">
 							<a class="hov-img0 how-pos5-parent">
-								<img src="blogImage/0002.jpg" alt="IMG-BLOG">
+								<img src="blogImage/bd1.jpg" alt="IMG-BLOG">
 
 								<div class="flex-col-c-m size-123 bg9 how-pos5">
 									<span class="ltext-107 cl2 txt-center">
