--- a/blog-detail5.html
+++ b/blog-detail5.html
@@ -195,7 +195,7 @@
 								In this project, We'd like to integrate real time object detection and mobile in practice.
 							</p>
                             
-                            <h4 class="ltext-109 cl2 p-b-28">
+                            <h4 class="mtext-112 cl2 p-b-33">
                                 Demo
                             </h4>
                             
