--- a/blog-detail5.html
+++ b/blog-detail5.html
@@ -230,6 +230,10 @@
                             include_top : True<br>
                             input shape : 224 * 224 * 3 <br>
                             classes : 4 <br>
+                            batch size : 10<br>
+                            epochs : 20<br>
+                            validation number ratio : 0.33<br>
+                            ModelCheckpoint : save_best_only=True<br>
 								
 							</p>
 
