--- a/blog-detail5.html
+++ b/blog-detail5.html
@@ -202,7 +202,7 @@
                             <p class="stext-117 cl6 p-b-26">
                             
                             We may assume that:<br>
-                            1. Generally, My grandfather pick immature fruits around 5am-7am. The dataset was collected in the surrounding without direct sunlight, so the performance may get worse as we use the app at other times.<br>
+                            1. Generally, My grandfathers pick immature fruits at 5am-7am. The dataset was collected without direct sunlight, so the performance may get worse as we use the app at other times.<br>
                             2. The app is ONLY used on the field.<br>
                             
                             <br>
